objects/report_sender__Email_Data__c.object
<CustomObject>
    <fields>
        <fullName>report_sender__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>report_sender__Attachment_Size__c</fullName>
        <label>Attachment Size</label>
        <summaryForeignKey>report_sender__Email_Attachment__c.report_sender__Email_Data__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>report_sender__Cron_Trigger_Id__c</fullName>
        <description>Id of cron trigger job</description>
        <inlineHelpText>Id of cron trigger job</inlineHelpText>
        <label>Cron Trigger ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Custom_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Template</label>
        <referenceTo>report_sender__Custom_Template__c</referenceTo>
        <relationshipLabel>Email Data</relationshipLabel>
        <relationshipName>Email_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>report_sender__Dashboard_Id__c</fullName>
        <label>Dashboard ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Do_not_Send_without_Attachment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Do not Send without Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Email_BCC__c</fullName>
        <label>Email BCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Email_Body__c</fullName>
        <label>Email Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>report_sender__Email_CC__c</fullName>
        <label>Email CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Email_From_Address__c</fullName>
        <label>Email From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Email_Jobs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Jobs</label>
        <referenceTo>report_sender__Email_Jobs__c</referenceTo>
        <relationshipLabel>Email Data</relationshipLabel>
        <relationshipName>Email_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>report_sender__Email_TO__c</fullName>
        <label>Email TO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__File_Type__c</fullName>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_UTC_used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is UTC used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Job_ID__c</fullName>
        <label>Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__ListViewId__c</fullName>
        <label>List View ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__MetadataFilters__c</fullName>
        <label>Metadata Filters</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>report_sender__Named_Credentials__c</fullName>
        <label>Named Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__NextSendDate__c</fullName>
        <label>Next Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>report_sender__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Original_Email_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Email Data</label>
        <referenceTo>report_sender__Email_Data__c</referenceTo>
        <relationshipLabel>Email Data</relationshipLabel>
        <relationshipName>Email_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>report_sender__Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Password_protect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Password_protect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Report_Folder__c</fullName>
        <label>Report Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Report_Id__c</fullName>
        <label>Report ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Report_Type__c</fullName>
        <label>Report Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Scheduled_Cron__c</fullName>
        <defaultValue>&apos;0 0 9 * * ?&apos;</defaultValue>
        <label>Scheduled Cron</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Scheduled_Type__c</fullName>
        <label>Scheduled Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Subject__c</fullName>
        <label>Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>report_sender__Successful_Send__c</fullName>
        <label>Successful Send</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__TargetObjectId__c</fullName>
        <label>Target Object ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Template_Id__c</fullName>
        <label>Template ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__isChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don’t sent empty report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__isSaveAfterSent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Save After Sent</label>
        <type>Checkbox</type>
    </fields>
    <label>Email Data</label>
    <listViews>
        <fullName>report_sender__All</fullName>
        <columns>NAME</columns>
        <columns>report_sender__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>report_sender__Report_Name__c</columns>
        <columns>report_sender__Report_Folder__c</columns>
        <columns>report_sender__NextSendDate__c</columns>
        <columns>report_sender__File_Type__c</columns>
        <columns>report_sender__Active__c</columns>
        <columns>report_sender__Email_From_Address__c</columns>
        <columns>report_sender__Email_TO__c</columns>
        <columns>report_sender__Subject__c</columns>
        <columns>report_sender__Successful_Send__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Email Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>report_sender__Check_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR ( NOT(CONTAINS( report_sender__Email_TO__c , &quot;@&quot;)),  
NOT (CONTAINS( report_sender__Email_TO__c , &quot;.&quot;))))</errorConditionFormula>
        <errorDisplayField>report_sender__Email_TO__c</errorDisplayField>
        <errorMessage>Please fill &quot;Email TO&quot; correctly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>report_sender__Check_File_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( report_sender__File_Type__c == &quot;excel&quot;),
NOT( report_sender__File_Type__c == &quot;csv&quot;),
NOT( report_sender__File_Type__c == &quot;xls&quot;),
NOT( report_sender__File_Type__c == &quot;html&quot;),
NOT( report_sender__File_Type__c == &quot;HTML&quot;),
NOT( report_sender__File_Type__c == &quot;pdf&quot;),
NOT( report_sender__File_Type__c == &quot;PDF&quot;),
NOT( report_sender__File_Type__c == &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>report_sender__File_Type__c</errorDisplayField>
        <errorMessage>Please fill &quot;File Type&quot; correctly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>report_sender__Check_Report_Type</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT (report_sender__Report_Type__c == &quot;Daily&quot;), 
NOT ( report_sender__Report_Type__c == &quot;DAILY&quot;),
NOT ( report_sender__Report_Type__c == &quot;daily&quot;),
NOT ( report_sender__Report_Type__c == &quot;Weekly&quot;),
NOT ( report_sender__Report_Type__c == &quot;WEEKLY&quot;),
NOT ( report_sender__Report_Type__c == &quot;weekly&quot;),
NOT ( report_sender__Report_Type__c == &quot;Montly&quot;),
NOT ( report_sender__Report_Type__c == &quot;MONTHLY&quot;),
NOT ( report_sender__Report_Type__c == &quot;monthly&quot;),
NOT ( report_sender__Report_Type__c == &quot;Email-Report&quot;),
NOT ( report_sender__Report_Type__c == &quot;Email-ListView&quot;),
NOT ( report_sender__Report_Type__c == &quot;Report&quot;),
NOT ( report_sender__Report_Type__c == &quot;report&quot;),
NOT ( report_sender__Report_Type__c == &quot;Dashboard&quot;),
NOT ( report_sender__Report_Type__c == &quot;dashboard&quot;),
NOT ( report_sender__Report_Type__c == &quot;scheduled&quot;),
NOT ( report_sender__Report_Type__c == &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>report_sender__Report_Type__c</errorDisplayField>
        <errorMessage>Please fill &quot;Report Type&quot; correctly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>report_sender__Needed_ID</fullName>
        <active>false</active>
        <description>Need List View ID or Report ID or Dashboard ID</description>
        <errorConditionFormula>AND(ISBLANK( report_sender__ListViewId__c ) , ISBLANK(  report_sender__Report_Id__c ), 
ISBLANK(  report_sender__Dashboard_Id__c))</errorConditionFormula>
        <errorMessage>Please fill one of fields (Report ID, List View ID or Dashboard ID).</errorMessage>
    </validationRules>
</CustomObject>